fix horizontal scroll

--- a/custom_css/style.css
+++ b/custom_css/style.css
@@ -51,14 +51,6 @@
 
   /* Horizontal Page Settings */
 
-body {
-  display: -ms-flexbox;
-  display: flex;
-  color: #fff;
-  text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
-}
-
 /* manipulates width of horizontal scroll */
 .cover-container {
   max-width: 72em;
